--- a/router/src/app/product/product.component.html
+++ b/router/src/app/product/product.component.html
@@ -2,3 +2,6 @@
     product works! {{productId}}
 
 </p>
+<a [routerLink]="['./']">子商品</a>
+<a [routerLink]="['./seller',99]">子商品</a>
+<router-outlet></router-outlet>
